# everlaw-edu

./: .gitignore  README.md  REAL_DATA_INTEGRATION_PLAN.md  docker-compose.yml  functional_specification.md  implementation_plan.md  prd.md  project_analysis_report.md  response.json  task.md
ai-engine/: README.md  main.py  pyproject.toml  rag_engine.py  requirements.txt  scheduler_main.py  scratch_retrieval.py  scratch_test.py  test_api_client.py  test_db.py  test_meta.py  test_meta2.py  test_meta3.py  test_meta4.py  test_meta5.py  test_meta6.py  test_out.txt  test_out2.txt  test_out3.txt  test_rag.py  test_retrieve.py
ai-engine/app/api/v1/: endpoints.py
ai-engine/app/core/: config.py  database.py
ai-engine/app/ingestion/: parser.py  scheduler.py
ai-engine/app/services/: adaptive_generator.py  chat_service.py  generator.py  graph_workflow.py  validator.py
ai-engine/backup_old/: rag_engine.py  seed_target_law.py
ai-engine/backup_old/scanner/: law_scanner.py
ai-engine/scanner/: law_scanner.py
ai-engine/scripts/: build_mode_a.py  clean_db.py  seed.py
docs/: implementation_plan.md  project_analysis_report.md
edu-client/: .env.example  .flutter-plugins-dependencies  README.md  analysis_results.md  pubspec.yaml
edu-client/.dart_tool/: package_config.json  package_graph.json
edu-client/android/: build.gradle.kts
edu-client/lib/: main.dart
edu-client/linux/: CMakeLists.txt
edu-client/test/: widget_test.dart
edu-client/web/: index.html  (+1 more)
edu-server/: build.gradle  run-server-example.bat  settings.gradle
task/: implementation_plan.md  task.md
(+125 files in other folders)
